--- a/style.css
+++ b/style.css
@@ -56,17 +56,18 @@ body{
     font-size: 17px;
 }
 .topnav a:hover {
-  background-color: #D6DDF6;
-  color: #1A1A1E;
+    background-color: #D6DDF6;
+    color: #1A1A1E;
 }
 .topnav a.active {
-  background-color: #1A1A1E;
-  color: #D6DDF6;
+    background-color: #1A1A1E;
+    color: #D6DDF6;
 }
 .topnav a.title {
     margin-left: 62px;
     background-color: transparent;
     color: #FFFFFF;
+    cursor: default;
 }
 .topnav a.logo {
     position: fixed;
@@ -93,15 +94,15 @@ body{
 }
 .entry{
     max-width: 800px;
-    max-height: 490px;
-    min-height: 490px;
+    max-height: 450px;
+    min-height: 450px;
     margin: auto;
     background-color:#242428;
 }
 /*-- Content --*/
 /*-- List Page --*/
 .operator.list{
-    max-height: 490px;
+    max-height: 450px;
     overflow-y: auto;
 }
 .operator.list img{
@@ -112,7 +113,7 @@ body{
 }
 /*-- Operator Page --*/
 .operator.select{
-    max-height: 490px;
+    max-height: 450px;
     overflow-y: hidden;
 }
 /*-- Naming --*/
@@ -120,19 +121,19 @@ body{
     font-size: 62px;
     text-decoration: underline;
     position: absolute;
-    margin:360px 0px 0px 122px;
+    margin:326px 0px 0px 128px;
     cursor: default;
 }
 .artist-name{
     font-size: 28px;
     position: absolute;
-    margin:434px 0px 0px 122px;
+    margin:400px 0px 0px 128px;
     cursor: zoom-in;
 }
 img.op-class{
     width: 112px;
     font-size: 28px;
-    margin:368px 0px 0px 8px;
+    margin:330px 0px 0px 8px;
 }
 img.op-faction{
     float: left;
@@ -160,14 +161,14 @@ div.return{
     margin: 8px 0px 0px 8px;
 }
 div.profile{
-    position: fixed;
+    position: absolute;
     min-width: 96px;
     min-height: 48px;
     background-color: gray;
     margin: 8px 0px 0px 700px;
 }
 div.voice{
-    position: fixed;
+    position: absolute;
     min-width: 96px;
     min-height: 48px;
     background-color: gray;
