--- a/style.css
+++ b/style.css
@@ -110,29 +110,41 @@ body{
     background-color:#242428;
 }
 .entryoperator{
-    transition: 0.5;
     display: none;
 }
 /*-- Content --*/
 /*-- List Page --*/
 .operator.list{
+    opacity: 0;
     position: relative;
-    max-height: 450px;
+    max-height: 410px;
     overflow-y: auto;
     transition: 0.5s;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 5%;
+    padding-right: 5%; 
+}
+.operator.list::-webkit-scrollbar{
+    display: none;
 }
 .operator.list img{
-    margin: 0px 4px 0px 4px ;
-    width: 80px;
-    border: 8px solid black;
     transition: 0.5s;
+    width: 120px;
+    border: black solid 2px;
 }
-.operator.list img:hover{
-    padding: 0px 8px 0px 8px ;
-    width: 80px;
-    border: 8px solid white;
+.op-individual {
+    color: black;
+    transition: 0.2s;
+    margin: 10px;
+    padding: 18px;
+    float: left;
+    background-color: white;
+    cursor: pointer;
 }
-
+.op-individual:hover {
+    box-shadow: 0px 0px 0px 4px white
+}
 /*-- Operator Page --*/
 .operator.select{
     position: relative;
@@ -140,7 +152,6 @@ body{
     width: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
-    transition: 0.5s;
 }
 .operator.profile{
     max-width: 450px;
@@ -207,7 +218,7 @@ body{
     transition: 0.4s;
 }
 .return img:hover{ 
-    box-shadow: 0px 0px 0px 1px white
+    box-shadow: 0px 0px 0px 1px white;
 }
 .profile{
     margin-top: 12px;
@@ -219,7 +230,7 @@ body{
     transition: 0.4s;
 }
 .profile img:hover{
-    box-shadow: 0px 0px 0px 1px white
+    box-shadow: 0px 0px 0px 1px white;
 }
 .voice{
     margin-top: 12px;
